# apa7-checker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_schema.json
.github/workflows/: ci.yml
.history/: README_20260305171625.md  README_20260305194254.md
apa7_checker/: __init__.py  __main__.py  core.py
tests/: test_core.py
