[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apa7-checker"
version = "1.0.0"
description = "Automated APA 7 reference checker for Word (.docx) documents. Produces JSON, HTML, and Word reordering reports."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["apa", "apa7", "references", "citations", "checker", "word", "docx", "academic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-docx>=0.8.11",
]

[project.optional-dependencies]
pdf = ["PyMuPDF"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
apa7-check = "apa7_checker.__main__:main"

[project.urls]
Homepage = "https://github.com/your-username/apa7-checker"
"Bug Tracker" = "https://github.com/your-username/apa7-checker/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["apa7_checker"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
